# EVA2SPORT

./: .gitignore  README.md  example_usage.py  install.ps1  install.sh  pyproject.toml  requirements.txt
data/: README.md
data/videos/: [video_name]_config.json
docs/: README.md  TIMESTAMP_PROCESSING.md
eva2sport/: __init__.py  config.py  pipeline.py
eva2sport/enrichment/: __init__.py  annotation_enricher.py  bbox_calculator.py  projection_utils.py
eva2sport/export/: __init__.py  multi_event_manager.py  project_exporter.py  video_exporter.py
eva2sport/tracking/: __init__.py  sam2_tracker.py  video_processor.py
eva2sport/utils/: __init__.py  eva_logger.py  gpu_optimizer.py  timestamp_reader.py  video_context.py
eva2sport/visualization/: __init__.py
eva2sport/visualization/config/: __init__.py  minimap_config.py  visualization_config.py
eva2sport/visualization/exporters/: __init__.py  video_exporter.py
eva2sport/visualization/field/: __init__.py  field_drawer.py  football_field.py
eva2sport/visualization/objects/: __init__.py  ball_renderer.py  base_renderer.py  object_renderer_factory.py  player_renderer.py  referee_renderer.py  staff_renderer.py  unknown_renderer.py
examples/: event_processing.py  events_processing.py  timestamp_processing_example.py  web_video_export_example.py
notebook/: README.md  README_SAM_INFERENCE_SEGMENT.md  SAM_EVA2PERF_COLAB.ipynb  SAM_inference.ipynb  SAM_inference_segment.ipynb  SAM_viz.ipynb
tests/: README.md  test_api.py  test_config.py  test_full_pipeline.py  test_integration.py  test_multi_anchor.py  test_multi_event_manager.py  test_pipeline_simple.py  test_simple.py  test_video_export.py
train_sam/: README.md  main_colab.ipynb  main_jupiter.ipynb
utils/FIFA_extraction_data/: README.md  cameras_poses_file_extractor.py  player_mask_extractor.py  requirements_fifa.txt  visualize_poses.py
utils/tools/: extract_segments_from_video.py
