[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eva2sport"
version = "0.1.0"
description = "Pipeline de segmentation vidéo avec SAM2 pour l'analyse sportive"
authors = [
    {name = "Antoine Verdon", email = "antoine@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["computer-vision", "segmentation", "sports", "sam2", "video-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# VERSIONS FLEXIBLES pour éviter les conflits
dependencies = [
    # Core ML dependencies
    "torch>=2.5.1",
    "torchaudio>=2.5.1", 
    "torchvision>=0.20.1",
    
    # Computer Vision & Detection
    "opencv-contrib-python>=4.10.0",
    "opencv-python>=4.10.0",
    "pillow>=10.0.0",
    "ultralytics>=8.0.0",
    "supervision>=0.20.0",
    
    # Data Science - VERSIONS FLEXIBLES
    "numpy>=1.24.0",  # Au lieu de ==1.26.4
    "pandas>=2.0.0",
    "matplotlib>=3.5.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    
    # Media processing
    "av>=10.0.0",
    "eva-decord>=0.6.0",
    
    # ML & AI
    "transformers>=4.30.0",
    "huggingface-hub>=0.15.0",
    "tokenizers>=0.13.0",
    
    # Jupyter ecosystem - VERSIONS FLEXIBLES
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipykernel>=6.20.0",
    "ipython>=8.0.0",
    "ipywidgets>=8.0.0",
    "jupyter-bbox-widget>=0.6.0",
    "notebook>=7.0.0",
    
    # Utilities
    "tqdm>=4.60.0",
    "loguru>=0.6.0",
    "hydra-core>=1.2.0",
    "omegaconf>=2.2.0",
    "pyyaml>=6.0.0",
    "click>=8.0.0",
    "requests>=2.28.0",  # Au lieu de ==2.28.2
    
    # Web/API
    "fastapi>=0.100.0",
    "uvicorn>=0.15.0",
    "flask>=2.0.0",
    "flask-cors>=4.0.0",
    
    # Annotation tools
    "pycocotools>=2.0.6",
    
    # Visualization
    "plotly>=5.0.0",
    
    # Other
    "packaging>=20.0",
    "filelock>=3.0.0",
    "fsspec>=2023.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

all = [
    "eva2sport[dev]"
]

[project.urls]
Homepage = "https://github.com/yourusername/EVA2SPORT"
Repository = "https://github.com/yourusername/EVA2SPORT"
Issues = "https://github.com/yourusername/EVA2SPORT/issues"

[project.scripts]
eva2sport = "eva2sport.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["eva2sport*"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 