[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eva2sport"
version = "0.1.0"
description = "Pipeline de segmentation vidéo avec SAM2 pour l'analyse sportive"
authors = [{name = "Antoine Verdon"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["computer-vision", "segmentation", "sports", "sam2", "video-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Dependencies avec versions spécifiées pour la reproductibilité
dependencies = [
    # PYTORCH - Version de base, GPU forcé par install.ps1
    # "torch>=2.5.1",          # ✅ Remettre
    # "torchvision>=0.20.1",   # ✅ Remettre
    # "torchaudio>=2.5.1",     # ✅ Remettre
    "torch @ https://download.pytorch.org/whl/cu121/torch-2.5.1%2Bcu121-cp310-cp310-win_amd64.whl",
    "torchvision @ https://download.pytorch.org/whl/cu121/torchvision-0.20.1%2Bcu121-cp310-cp310-win_amd64.whl",
    "torchaudio @ https://download.pytorch.org/whl/cu121/torchaudio-2.5.1%2Bcu121-cp310-cp310-win_amd64.whl",



    # Computer Vision
    "opencv-python>=4.10.0",
    "opencv-contrib-python>=4.10.0",
    "pillow>=10.0.0",
    
    # Data Science
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.5.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    
    # Detection & Tracking
    "ultralytics>=8.0.0",
    "supervision>=0.20.0",
    "pycocotools>=2.0.6",
    
    # ML & AI
    "transformers>=4.30.0",
    "huggingface-hub>=0.15.0",
    "tokenizers>=0.13.0",
    "safetensors>=0.3.0",
    
    # Media processing
    "av>=10.0.0",
    
    # Utilities
    "tqdm>=4.60.0",
    "loguru>=0.6.0",
    "pyyaml>=6.0.0",
    "requests>=2.28.0",
    "click>=8.0.0",
    
    # Web (optionnel)
    "fastapi>=0.100.0",
    "uvicorn>=0.15.0",
    "flask>=2.0.0",
    "flask-cors>=4.0.0",
    
    # Visualization
    "plotly>=5.0.0",
]

[project.optional-dependencies]
jupyter = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0", 
    "ipykernel>=6.20.0",
    "ipython>=8.0.0",
    "ipywidgets>=8.0.0",
    "jupyter-bbox-widget>=0.6.0",
    "notebook>=7.0.0",
]

dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

# SAM2 installé séparément depuis GitHub dans install.ps1

[project.urls]
Homepage = "https://github.com/2nzi/EVA2SPORT"
Repository = "https://github.com/2nzi/EVA2SPORT"
Issues = "https://github.com/2nzi/EVA2SPORT/issues"

[project.scripts]
eva2sport = "eva2sport.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["eva2sport*"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 