[project.optional-dependencies]

# Jupyter usage
jupyter = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipykernel>=6.20.0",
    "ipython>=8.0.0",
    "ipywidgets>=8.0.0",
    "jupyter-bbox-widget>=0.6.0",
    "notebook>=7.0.0",
]

# Dev tools
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

# SAM2 install
sam2 = [
    "git+https://github.com/facebookresearch/sam2.git"
]

# Google Colab setup
colab = [
    "opencv-python",
    "matplotlib",
    "tqdm",
    "pillow",
    "jupyter",
    "ipywidgets",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "torchaudio>=2.5.1",
]